export interface RouteDTO {
    routeId: string;
    idDepartureWarehouse: string;
    departureWarehouse: string;
    idArrivalWarehouse: string;
    arrivalWarehouse: string;
    distance: number;
    time: number;
    energy: number;
    extraTime: number;
}